# penneryu-android

./: .gitignore  README.md  build.gradle  circle.yml  newrelic.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/activity/src/: main.cpp
app/src/main/cpp/anddown/src/: anddown.c  html.h
app/src/main/cpp/pdfium/: Android.mk
app/src/main/jni/: Application.mk  helloworld.c  helloworld.cpp  helloworld.h
app/src/main/jni/anddown/: Android.mk
app/src/main/res/drawable/: bottom_tab_penner.xml  chat_btn_files.xml  chat_btn_keyboard.xml  chat_btn_speak.xml  chat_btn_voice.xml  chat_msg_fail.xml  chat_msg_from.xml  chat_msg_to.xml  chat_recording_container.xml  ic_account_circle_24dp.xml  ic_check_box_24dp.xml  ic_check_box_outline_blank_24dp.xml  icon_unread.xml  penner_tab_txt.xml  test_level_list.xml
app/src/main/res/layout/: activity_ashmen.xml  activity_bottom_tab.xml  activity_chat.xml  activity_databinding.xml  activity_emoji.xml  activity_fresco.xml  activity_kotlin.xml  activity_large_image.xml  activity_login.xml  activity_main.xml  activity_material.xml  activity_material_detail.xml  activity_ndk.xml  activity_pdf.xml  activity_rx_java.xml  activity_scale_gesture.xml  activity_service.xml  activity_sqlbrite.xml  activity_test.xml  activity_webview.xml  bottom_conversation_item_common.xml  bottom_fragment_penner.xml  bottom_tab_item.xml  chat_msg_img_received.xml  chat_msg_system.xml  (+12 more)
gradle/wrapper/: gradle-wrapper.properties
pennerlib/: build.gradle
(+113 files in other folders)
